[gd_scene load_steps=2 format=3 uid="uid://76ceibbp4ffh"]

[ext_resource type="Script" path="res://addons/remapping_tools/scripts/remap_event_tile.gd" id="1_bq5j2"]

[node name="RemapEventTile" type="HBoxContainer"]
script = ExtResource("1_bq5j2")

[node name="EventButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Event"

[node name="DeleteButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
flat = true
icon_alignment = 1
